--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ python-multipart==0.0.9
 motor==3.4.0
 pymongo==4.8.0
  
-# Storage (S3-compatible: covers MinIO or Cloudflare R2 or AWS S3)
+# Storage (Cloudflare R2 or AWS S3 python sdks)
 boto3==1.34.144
 botocore==1.34.144
  
