--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,6 +2,9 @@
 asyncio_mode = "auto"
 testpaths = ["tests"]
 addopts = "-v --tb=short"
+filterwarnings = [
+    "ignore::DeprecationWarning:reportlab",
+]
 
 [tool.coverage.run]
 source = ["app"]
