styles: theme provider

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "@radix-ui/react-toast": "^1.2.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "mongodb": "^6.21.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^15.0.0",
