--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.34.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.575.0",
     "mongodb": "^6.21.0",
     "next": "^16.1.6",
